/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 * Click nbfs://nbhost/SystemFileSystem/Templates/Classes/Class.java to edit this template
 */
package ingredients;

/**
 *
 * @author عسثق
 */
public class Color {
    private int R,G,B;

    public Color(int R, int G, int B) {
        this.R = R;
        this.G = G;
        this.B = B;
    }

    public void setColor(int R, int G, int B)
    {
        this.R = R;
        this.G = G;
        this.B = B;
    }
    
    public Color getColor()
    {
        return this;
    }
    

    
    
    
       
}
