/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 * Click nbfs://nbhost/SystemFileSystem/Templates/Classes/Class.java to edit this template
 */
package toppings;

import ingredients.Ingredient;

/**
 *
 * @author عسثق
 */
public abstract class Toppings extends Ingredient{

    public Toppings(String name, double calories) {
        super(name, calories);
    }
   
    
    
    
    
}
